# leaf-desktop

./: .env.example  .gitignore  LICENSE  README.md  docker-linux.sh  eslint.config.js  index.html  package.json  release_note.txt  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  release.yml
scripts/: build_tauri.js
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: helper.rs  main.rs  tray.rs  tray_icon_manager.rs  window_manager.rs
src/api/: ApiClient.ts  CheckConnectivityReply.ts  FailoverStatusReply.ts  Log.ts  MptpStatusReply.ts  OutboundHealthReply.ts  OutboundInfo.ts  OutboundLastPeerActiveReply.ts  OutboundListReply.ts  OutboundSinceLastPeerActiveReply.ts  PingReply.ts  SelectListReply.ts  SelectReply.ts  SpeedTestStatusReply.ts  Stat.ts  UsageReply.ts
src/components/: Greet.vue  InfoCard.vue  Leaf.vue  Message.vue  Outbounds.vue  SettingsDropdown.vue  SettingsInput.vue  SettingsListEditor.vue  SettingsSection.vue  SettingsToggle.vue  Sidebar.vue  TrafficMonitor.vue  UpdateDialog.vue
src/page/: AutoProfile.vue  Dashboard.vue  MemoryLogger.vue  Settings.vue  Subscription.vue
src/router/: index.ts
src/store/: deeplink.ts  leaf.ts  outbounds.ts  preferences.ts  subscription.ts  update.ts  usage.ts
src/types/: types.ts
src/utils/: OutboundUtils.ts  Utils.ts  defaultPreferences.ts  logger.ts
