[package]
name = "leaf-desktop"
version = "1.1.2"
description = "Leaf Tauri Desktop Application"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/surfshield-vpn/leaf-desktop"
authors = ["Shiroe Dev <shiroedev@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "leaf-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
leaf-build-deps = { version = "0.13.2", registry = "kellnr"}

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-http = "2.5.2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-single-instance = { version = "2.3.4", features = ["deep-link"] }
tauri-plugin-store = "2.4.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-log = "2.4.0"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sysinfo = "0.37.2"
once_cell = "1.19"
scopeguard = "1.2"
parking_lot = "0.12"
notify = "7.0"
image = "0.25"

leaf_sdk_desktop = { version = "0.6.2", registry = "kellnr" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
