[package]
name = "leaf-desktop"
version = "2.1.1"
description = "Leaf Tauri Desktop Application"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/surfshield-vpn/leaf-desktop"
authors = ["Shiroe Dev <shiroedev@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "leaf-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }
leaf-build-deps = { version = "0.14.4", registry = "kellnr"}

[dependencies]
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-single-instance = { version = "2.3.4", features = ["deep-link"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-log = "2.8.0"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sysinfo = "0.38.0"
once_cell = "1.21.3"
scopeguard = "1.2"
parking_lot = "0.12"
notify = "7.0"
image = "0.25.9"

leaf_sdk_desktop = { version = "2.2.6", registry = "kellnr" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
